Add application role and adapt playbook to work with dynamic hosts

--- a/ansible/my_great_playbook.yml
+++ b/ansible/my_great_playbook.yml
@@ -1,5 +1,5 @@
 ---
-# REMOVE
+
 - hosts: all
   become: yes
   become_method: sudo
@@ -7,33 +7,9 @@
   - name: Install git on all servers
     yum: name=git state=present
 
-- hosts: all
-  become: yes
-  become_method: sudo
-
-  roles:
-    - create_user
-# REMOVE
-
-- hosts: rproxys
+- hosts: ec2
   become: yes
   become_method: sudo
 
   roles:
     - rproxy
-
-# REMOVE
-- hosts: dbservers
-  become: yes
-  become_method: sudo
-
-  roles:
-    - dbserver
-
-- hosts: lbservers
-  become: yes
-  become_method: sudo
-
-  roles:
-    - lbserver
-# REMOVE
