--- a/ansible/roles/rproxy/files/load-balancing.conf
+++ b/ansible/roles/rproxy/files/load-balancing.conf
@@ -1,15 +1,16 @@
-# http {
-  upstream fake_app {
-    server apache1.local:23180;
-    server apache2.local:23280;
-  }
+http {
 
   server {
     listen 80 default;
 
     location / {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
-      proxy_pass http://fake_app;
+      proxy_cache_bypass $http_upgrade;
+
+      proxy_pass http://localhost:8080;
     }
   }
-# }
+}
