--- a/ansible/demo.yml
+++ b/ansible/demo.yml
@@ -13,3 +13,11 @@
 
   roles:
     - rproxy
+    
+- hosts: ec2
+  become: yes
+  become_method: sudo
+  vars_files:
+    - vars/main.yml
+  roles:
+    - geerlingguy.nodejs
